--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-barcode-scanner": "~11.1.2",
+    "expo-file-system": "~13.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
@@ -21,6 +23,7 @@
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
