--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-file-system": "~13.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.8.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
